# CCC-Engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  create_gif_collection.sh  create_img_collection.sh
include/: gif_manager.h
include/egif/: gif_manager.cpp
metadata/: _demo_metadata.json  _metadata.json  custom.json  sneak_peeks_colors.json  sneak_peeks_merge.json  sneak_peeks_thick_glasses.json  verify.json
runtime_data/: ccc_demo_skeleton.skel  ccc_demo_skeleton0.3.atlas  ccc_demo_skeleton0.5.atlas  chiguire_merge.atlas  chiguire_merge.skel  chiguire_merge0.3.atlas
spine_project/: ccc_demo.spine  chiguire_project.spine  spine_config.json
src/: main.cpp
